Added option to send DQ comments in the email. Removed broken URL link from email

--- a/config.json
+++ b/config.json
@@ -76,6 +76,11 @@
                     ]
                 },
                 {
+                    "key": "comment",
+                    "name": "<b>Send comment text:</b><br>(May contain PHI)",
+                    "type": "checkbox"
+                },
+                {
                     "key": "sent",
                     "name": "Most Recent Reminder",
                     "type": "text",
